--- a/server/views/AssignFitterPDF.ejs
+++ b/server/views/AssignFitterPDF.ejs
@@ -30,37 +30,36 @@
     <section style="width: 100%; height: 250px;">
             <table style="width: 30%; float: left; border: none; margin-bottom: 2%;">
                <tr>
-                 <th style="border: none;text-align: left;"> CustomerName</th>
+                 <th style="border: none;text-align: left;">Name</th>
                  <td style="border: none;">: <%=i.CustomerName%></td>
                </tr>
                <tr>
-                 <th style="border: none;text-align: left;"> MobileNo1</th>
+                 <th style="border: none;text-align: left;"> Mobile No.</th>
                  <td style="border: none;">: <%=i.MobileNo1%></td>
                </tr>
                <tr>
-                 <th style="border: none;text-align: left;"> InvoiceDate</th>
+                 <th style="border: none;text-align: left;"> Invoice Date</th>
                  <td style="border: none;">: <%=i.InvoiceDate%></td>
                </tr>
                <tr>
-                 <th style="border: none;text-align: left;"> DeliveryDate</th>
+                 <th style="border: none;text-align: left;"> Delivery Date</th>
                  <td style="border: none;">: <%=i.DeliveryDate%></td>
                </tr>
           
             </table>
-            <table style="width: 65%; float: right; margin-bottom: 2%;">
+            <table style="width: 68%; float: right; margin-bottom: 2%;">
                 <thead>
-                    <tr>
+                    <tr style="white-space: nowrap;">
                         <th style="border: none;"></th>
                         <th style="border: none;"></th>
                         <th style="border: none;"></th>
-                        <th style="border: none;">Right</th>
-                        <th style="border: none;"></th>
+                        <th style="border: none;" colspan="2">Right Eye</th>
                         <th style="border-left: none;"></th>
                         <th style="border: none;"></th>
                         <th style="border: none;"></th>
-                        <th style="border: none;">Left</th>
+                        <th style="border: none;">Left Eye</th>
                         <th style="border: none;"></th>
-                        <th style="border: none;"></th>
+                        <th style="border-left: none;"></th>
                     </tr>
                     <tr>
                         <th></th>
@@ -78,7 +77,7 @@
                 </thead>
                 <tbody>
                     <% for(const Measurement of JSON.parse(i.MeasurementID)){ %>
-                    <tr style="text-align: center;">
+                    <tr style="text-align: center;" >
                         <td>D/V</td>
                         <td> <%=Measurement.REDPSPH%></td>
                         <td> <%=Measurement.REDPCYL%></td>
@@ -106,7 +105,7 @@
                     </tr>
                  
                 </tbody>
-                <tfoot>
+                <tfoot style="white-space: nowrap;">
                     <tr> 
                         <th colspan="3">Refractive Index</th>
                         <th colspan="2"> <%=Measurement.RefractiveIndex%></th>
@@ -134,8 +133,8 @@
             <table style="width: 100%; ">
                 <thead>
                     <tr style="text-align: left;">
-                        <th> Product Name </th>
-                        <th> Remaks </th>
+                        <th> Product Description  </th>
+                        <th> Remarks </th>
                       </tr>
                 </thead>
               <tbody>
