--- a/web1/src/app/common/login.component.css
+++ b/web1/src/app/common/login.component.css
@@ -185,11 +185,9 @@ h4:hover {
 .box {
   max-width: 500px;
   padding: 40px;
-
   top: 50%;
   left: 50%;
-  background: rgb(25, 19, 80);
-  ;
+  background: rgb(25, 19, 80);;
   text-align: center;
   transition: 0.25s;
   margin-top: 10px;
