--- a/web1/src/app/po/fitter-po/fitter-po.component.html
+++ b/web1/src/app/po/fitter-po/fitter-po.component.html
@@ -36,7 +36,7 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                <!-- <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup === 'CompanyAdmin'">
                                         <mat-label>Shop Name</mat-label>
                                         <mat-select name="Supplier" editable="true" [(ngModel)]="data.ShopID"
@@ -68,7 +68,7 @@
                                             Barcode required
                                         </mat-error>
                                     </mat-form-field>
-                                </div>
+                                </div> -->
                                 <div class="col-md-2">
                                     <button (click)="Search(mode)" type="button" mat-raised-button color="primary">
                                         Search
