--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -210,8 +210,10 @@
                             <th>GST%</th>
                             <th>GST Amount</th>
                             <th>Grand Total</th>
-                            <th>Retail Price</th>
-                            <th>WholeSale Price</th>
+                            <th>Retail Per_Pc Price</th>
+                            <th>Retail Total Price</th>
+                            <th>WholeSale Per_Pc Price</th>
+                            <th>WholeSale Total Price</th>
                           </tr>
                           <tr class="totolRow" *ngIf="this.DetailtotalQty != null">
                             <td>
@@ -237,8 +239,12 @@
                             <td data-mdb-toggle="modal" data-mdb-target="#exampleModal" (click)="openModal(content)">
                               {{this.DetailtotalGstAmount}}</td>
                             <td>{{this.DetailtotalAmount}}</td>
-                            <td>{{this.DetailtotalRetailPrice}}</td>
-                            <td>{{this.DetailtotalWholeSalePricet}}</td>
+                            <!-- <td>{{this.DetailtotalRetailPrice}}</td> -->
+                            <td></td>
+                            <td>{{this.TtlR}}</td>
+                            <!-- <td>{{this.DetailtotalWholeSalePricet}}</td> -->
+                            <td></td>
+                            <td>{{this.TtlW}}</td>
                           </tr>
                         </thead>
                         <tbody class="text-center">
@@ -262,7 +268,9 @@
                             <td>{{s.GSTAmount }}</td>
                             <td>{{s.TotalAmount }}</td>
                             <td>{{s.RetailPrice }}</td>
+                            <td>{{s.RetailPrice * s.Count}}</td>
                             <td>{{s.WholeSalePrice }}</td>
+                            <td>{{s.WholeSalePrice * s.Count}}</td>
                           </tr>
                         </tbody>
                       </table>
