--- a/web1/src/styles.scss
+++ b/web1/src/styles.scss
@@ -29,6 +29,10 @@ $OguruPro-theme: mat.define-light-theme((
   )
 ));
 
+html body {
+    zoom:100%
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
