--- a/web1/src/app/inventory/purchase/purchase.component.html
+++ b/web1/src/app/inventory/purchase/purchase.component.html
@@ -540,7 +540,7 @@
                                                         {{data.Quantity}}</td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
-                                                        {{data.DiscountPercentage}}%</td>
+                                                        {{data.DiscountPercentage  | number: '1.2-2'}}%</td>
                                                     <td *ngIf="data.UpdateProduct"
                                                         style=" width:60px;text-align: center;">
                                                         <input style=" width:60px;text-align: center;" min="0"
