--- a/web1/src/app/sale/commission-list/commission-list.component.html
+++ b/web1/src/app/sale/commission-list/commission-list.component.html
@@ -76,6 +76,7 @@
                                             <th>PurchaseDate</th>
                                             <th>PaymentStatus</th>
                                             <th>InvoiceAmount</th>
+                                            <th>ShopName</th>
                                           </tr>
                                       </thead>
                                       <tbody class="text-center">
@@ -93,6 +94,9 @@
                                             <td>{{dateFormat(v.PurchaseDate)}}</td>
                                             <td>{{v.PaymentStatus}}</td>
                                             <td>{{v.TotalAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
+                                            <td>{{v.ShopName}}<span [style.color]="'blue'"
+                                              *ngIf="v.AreaName != 'null'">({{v.AreaName}})</span>
+                                          </td>
                                         </tr>
                                       </tbody>
                                   </table>
