--- a/web1/src/app/inventory/purchase/purchase.component.html
+++ b/web1/src/app/inventory/purchase/purchase.component.html
@@ -775,7 +775,7 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-1 col-lg-2 col-md-2 col-sm-6 col-4  mb-0 ml-auto">
-                                    <button type="button" class="mr-3" mat-raised-button
+                                    <button (click)="barcodePrintAll()" type="button" class="mr-3" mat-raised-button
                                         color="primary">PrintBarcode</button>
                                 </div>
                                 <div *ngIf="id == 0" class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0 ml-auto">
