--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -410,7 +410,7 @@
                         <div class="col-xl-10 col-lg-10 col-md-10 col-11 mb-0 " (click)="fileInput1.click()"
                             style="cursor: pointer;">
                             <i class="fa-solid fa-cloud-arrow-up upload_icon">
-                                <span style="font-size: 10px;letter-spacing: 2px;"> Water Image </span>
+                                <span style="font-size: 10px;letter-spacing: 2px;"> Water Mark </span>
                             </i>
                             <input #fileInput1 id="my-input" name='WaterMark' type="file"
                                 (change)="uploadImage($event, 'water')" style="display:none;">
