--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -13,7 +13,8 @@
 <style>
 
     html body {
-        zoom: 95%;
+        /* zoom: 95%; */
+        zoom: 70%;
     }
 </style>
 <body>
@@ -40,7 +41,12 @@
                     <th  style="width: 200px;">
                         <div
                             style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 18px;">
-                                   MRP <%=i.RetailPrice%>              
+                            <% if (data.CompanyID !== 2){%>
+                                       MRP  <%=i.RetailPrice%>    
+                              <%}%>
+                            <% if (data.CompanyID == 2){%>
+                                       OMR  <%=i.RetailPrice%>    
+                              <%}%>            
                         </div>
                         <div
                             style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 18px; font-family: verdana ;">
