--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -866,7 +866,7 @@
                         </mat-error>
                     </mat-form-field>
                 </div>
-                <div *ngIf=" this.id2 === 0 && this.loginShop.AdminDiscount === 'true' && this.user.UserGroup === 'Employee' ||  this.id2 === 0 && this.loginShop.AdminDiscount === 'true' && this.user.UserGroup === 'CompanyAdmin'" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                <div *ngIf=" this.id2 == 0 && this.loginShop.AdminDiscount === 'true' && this.user.UserGroup === 'Employee' ||  this.id2 === 0 && this.loginShop.AdminDiscount === 'true' && this.user.UserGroup === 'CompanyAdmin'" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Additional Discount%</mat-label>
                         <input matInput name="AddlDiscountPercentage"
@@ -889,7 +889,7 @@
                         </mat-error>
                     </mat-form-field>
                 </div>
-                <div *ngIf=" this.id2 === 0 && this.loginShop.AdminDiscount === 'true' && this.user.UserGroup === 'Employee' ||  this.id2 === 0 && this.loginShop.AdminDiscount === 'true' && this.user.UserGroup === 'CompanyAdmin'" class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0">
+                <div *ngIf=" this.id2 == 0 && this.loginShop.AdminDiscount === 'true' && this.user.UserGroup === 'Employee' ||  this.id2 === 0 && this.loginShop.AdminDiscount === 'true' && this.user.UserGroup === 'CompanyAdmin'" class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Additional Discount</mat-label>
                         <input matInput name="AddlDiscount" type="number" min="0"
