--- a/web1/src/app/admin/user-update-password/user-update-password.component.html
+++ b/web1/src/app/admin/user-update-password/user-update-password.component.html
@@ -72,6 +72,7 @@
                                         <tr>
                                             <th>Details</th>
                                             <th class="text-left">S.No</th>
+                                            <th class="text-left">CompanyID</th>
                                             <th class="text-left"> Name</th>
                                             <th class="text-left">Mobile1</th>
                                             <th class="text-left">Mobile2</th>
@@ -91,6 +92,7 @@
                                                 </i>
                                             </td>
                                             <td class="text-left">{{dataList.length - i }}</td>
+                                            <td class="text-left">{{data.CompanyID}}</td>
                                             <td class="text-left">{{data.Name}}</td>
                                             <td class="text-left">{{data.MobileNo1 }}</td>
                                             <td class="text-left">{{data.MobileNo2}}</td>
@@ -120,7 +122,7 @@
     </div>
     <div class="modal-body">
         <form #f="ngForm">
-          
+
                 <div class="row">
                     <div class="col-xl-10 col-lg-10 col-md-10 col-10 mb-0 mx-auto">
                         <h4 style="color:#ff5100;font-weight: bolder;">UserName/ID - {{loginName}}</h4>
@@ -150,7 +152,7 @@
                         </mat-form-field>
                     </div>
                 </div>
-           
+
             <div class="modal-footer">
                 <button type="button" mat-raised-button color="primary" [disabled]="!f.valid"
                     (click)="UpdatePassword()">Update</button>
